--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -1,11 +1,11 @@
 footer#footer
     div#social
-        a.symbol(href='https://github.com/fuzhouxxdong')
+        a.symbol(href='https://github.com/AnnieCyl')
             i.fa.fa-github
     p.small © Copyright 2018 &nbsp;
-        i.fa.fa-heart(aria-hidden='true') &nbsp;Dxx
+        i.fa.fa-heart(aria-hidden='true') &nbsp;Annie
     p.small Powered by &nbsp;
         a(href='https://hexo.io/') Hexo &nbsp;
         | Theme By &nbsp;
-        a(href='https://github.com/fuzhouxxdong/hexo-theme-dxx') Dxx
+        a(href='https://github.com/AnnieCyl/hexo-theme-dxx') Annie
 
