--- a/layout/post.pug
+++ b/layout/post.pug
@@ -6,7 +6,7 @@ block content
         article
             header
                 h1!=page.title
-                h2.headline!=date(page.date, 'MMM DD, YYYY h:mm')
+                h2.headline!=date(page.date, 'YYYY-MM-DD HH:mm:ss')
                     |·
                     |#{wordcount(page.content)} words
                     |·
